feat: use nvchad

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,7 +29,7 @@ bind -r C-l resize-pane -R 5
 # split horizontal
 bind | split-window -h -c '#{pane_current_path}'
 # split vertical
-bind | split-window -v -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
 
 # copy mode
 # `prefix-[` to enter copy mode
