--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,7 +8,9 @@ set-option -g focus-events on
 set-window-option -g mode-keys vi
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-bind -r e kill-pane -a # end all pane
+unbind-key q
+bind -r q kill-pane -a
+bind -r m resize-pane -Z
 
 # switching pane
 bind -r k select-pane -U 
@@ -27,7 +29,7 @@ bind -r C-h resize-pane -L 5
 bind -r C-l resize-pane -R 5
 
 # split horizontal
-bind | split-window -h -c '#{pane_current_path}'
+bind \\ split-window -h -c '#{pane_current_path}'
 # split vertical
 bind - split-window -v -c '#{pane_current_path}'
 
