--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,10 @@
 
 # white list
 !/.gitignore
-!/.bin/*
+!/bin/*
 !/README.md
 !/.zshrc
 !/.latexmkrc
 !/.gdbinit
-!/tmux/*
-!/nvim/**/*
-nvim/LICENSE
-nvim/.neoconf.json
-nvim/lazy-lock.json
-nvim/lazyvim.json
-nvim/stylua.toml
-nvim/README.md
+!/.tmux.conf
+!/.vimrc
