--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,8 @@ unbind C-b
 set-option -g prefix C-t
 set-option -g repeat-time 0
 set-option -g focus-events on
+set-option -sg escape-time 10
+set-option -g default-terminal "screen-256color"
 
 # key bindings
 set-window-option -g mode-keys vi
