--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -24,10 +24,10 @@ customCommands:
             description: "ドキュメントの更新や改善"
             value: "docs"
           - name: "style"
-            description: "コードフォーマットの修正、UIのみの変更"
+            description: "コードのフォーマットの変更(セミコロンの追加や改行の修正など)"
             value: "style"
           - name: "refactor"
-            description: "パフォーマンスの改善なしのコードの改善"
+            description: "パフォーマンスの改善なしのコードの可読性の改善"
             value: "refactor"
           - name: "test"
             description: "テストの追加や改善"
@@ -35,12 +35,15 @@ customCommands:
           - name: "perf"
             description: "パフォーマンスの改善"
             value: "perf"
+          - name: "build"
+            description: "ビルドプロセスの変更または依存関係のアップデート"
+            value: "build"
+          - name: "ci"
+            description: "CI/CDの設定変更"
+            value: "ci"
           - name: "chore"
-            description: "ビルドプロセスの変更や改善"
+            description: "その他の変更"
             value: "chore"
-          - name: "wip"
-            description: "作業中"
-            value: "wip"
       - type: "input"
         title: "Enter the Message"
         key: "Message"
