--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,8 @@ set-option -g prefix C-t
 set-option -g repeat-time 0
 set-option -g focus-events on
 set-option -sg escape-time 10
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ",xterm-256color:RGB"
 
 # key bindings
 set-window-option -g mode-keys vi
