fix: window dir (tmux)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,6 +36,9 @@ bind \\ split-window -h -c '#{pane_current_path}'
 # split vertical
 bind - split-window -v -c '#{pane_current_path}'
 
+# create window in current pane
+bind c new-window -c '#{pane_current_path}'
+
 # copy mode
 # `prefix-[` to enter copy mode
 bind -T copy-mode-vi v send-keys -X begin-selection # `v` to normal select
